@@ -8,6 +8,7 @@
 * Created a simple JSON API framework
 * Update navigation on mobile to fit on smaller screens
 * Group recently used and active projects at the top of the menu
+* Add a manual update page for easier upgrading of unreleased versions
 
 * Don't send notifications to disabled accounts
 * Re-enable eclipse build handling
